intear-dex-management/tests/snapshots/engine_admin__custody_of_token.snap
---
source: intear-dex-management/tests/engine_admin.rs
expression: "cli.view(&[\"engine\", \"admin\", \"custody\", \"nep141:usdt.tether-token.near\"])"
---
$ near-intear-dex-management engine admin custody nep141:usdt.tether-token.near network-config sandbox now
exit code: 0
--- stdout ---
In custody               5,250.5 USDt
Held by dex.intear.near  5,258 USDt
Untracked                7.5 USDt
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine admin custody nep141:usdt.tether-token.near network-config sandbox now
