intear-dex-management/tests/snapshots/engine_admin__migrate_by_account_outside_can_pause.snap
---
source: intear-dex-management/tests/engine_admin.rs
expression: "cli.run_as_given(&[\"engine\", \"admin\", \"migrate\", \"alice.near\",\n\"slimedragon.near\", engine_code_path, \"sign-with-legacy-keychain\",\n\"network-config\", \"sandbox\",])"
---
$ near-intear-dex-management engine admin migrate alice.near slimedragon.near [ENGINE CODE] sign-with-legacy-keychain network-config sandbox
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine admin migrate alice.near slimedragon.near [ENGINE CODE] sign-with-legacy-keychain network-config sandbox

Error:
   0: alice.near can't pause or unpause dex.intear.near

Suggestion: Sign with slimedragon.near or pause.slimedragon.near
