intear-dex-management/tests/snapshots/engine_admin__migration_args.snap
---
source: intear-dex-management/tests/engine_admin.rs
expression: "cli.view(&[\"engine\", \"admin\", \"migration-args\", \"bob.near\",\noutput_directory_path])"
---
$ near-intear-dex-management engine admin migration-args bob.near [TEMPORARY DIRECTORY]/engine-upgrade network-config sandbox now
exit code: 0
--- stdout ---
Block                      [HEIGHT]
Paused                     yes
Trusted code deployer      bob.near
Dex storage balances       20.01591 NEAR total, [BUILD DEPENDENT] NEAR used
User storage balances      2 NEAR total, 0.01696 NEAR used
Registered assets to list  6 in 1 batch of up to 200
Directory                  [TEMPORARY DIRECTORY]/engine-upgrade
Files                      migrate-args.json, backfill-001.json
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine admin migration-args bob.near [TEMPORARY DIRECTORY]/engine-upgrade network-config sandbox now
