intear-dex-management/tests/snapshots/engine_admin__migration_args_into_directory_with_files.snap
---
source: intear-dex-management/tests/engine_admin.rs
expression: "cli.view(&[\"engine\", \"admin\", \"migration-args\", \"slimedragon.near\",\noutput_directory_path])"
---
$ near-intear-dex-management engine admin migration-args slimedragon.near [TEMPORARY DIRECTORY]/engine-upgrade network-config sandbox now
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine admin migration-args slimedragon.near [TEMPORARY DIRECTORY]/engine-upgrade network-config sandbox now

Error:
   0: [TEMPORARY DIRECTORY]/engine-upgrade isn't empty

Suggestion: Choose a new directory, so that no file of an earlier run is sent with these
