intear-dex-management/tests/snapshots/engine_admin__migration_args_with_missing_trusted_code_deployer.snap
---
source: intear-dex-management/tests/engine_admin.rs
expression: "cli.view(&[\"engine\", \"admin\", \"migration-args\", \"nobody.near\",\noutput_directory_path])"
---
$ near-intear-dex-management engine admin migration-args nobody.near [TEMPORARY DIRECTORY]/engine-upgrade network-config sandbox now
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine admin migration-args nobody.near [TEMPORARY DIRECTORY]/engine-upgrade network-config sandbox now

Error:
   0: nobody.near doesn't exist on network sandbox

Suggestion: Check the account id, or choose a connection to the network it's on
