intear-dex-management/tests/snapshots/engine_admin__operations_run.snap
---
source: intear-dex-management/tests/engine_admin.rs
expression: batch_record
---
$ near-intear-dex-management engine operations run alice.near [TEMPORARY DIRECTORY]/batch.json --deposit '2 NEAR' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 0
--- stdout ---
--- stderr ---
├  sandbox · signer alice.near · dex.intear.near
│  Deposit 2 NEAR into alice.near's balance on dex.intear.near before the operations
│  Register near for bob.near
│  Transfer 1 NEAR from alice.near to bob.near
│  Swap 1 NEAR for USDt on slimedragon.near/xyk, getting at least 2 USDt
│  Withdraw the USDt that the previous swap made from alice.near's balance to alice.near's wallet
│  Actions: execute_operations (2 NEAR, 100 Tgas)
├  Unsigned transaction:
│    signer_id:    alice.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  execute_operations
│                       args:         {
│                                       "operations": [
│                                         {
│                                           "RegisterAssets": {
│                                             "asset_ids": [
│                                               "near"
│                                             ],
│                                             "for": {
│                                               "Account": "bob.near"
│                                             }
│                                           }
│                                         },
│                                         {
│                                           "TransferAsset": {
│                                             "to": {
│                                               "Account": "bob.near"
│                                             },
│                                             "asset_id": "near",
│                                             "amount": "1000000000000000000000000"
│                                           }
│                                         },
│                                         {
│                                           "SwapSimple": {
│                                             "dex_id": "slimedragon.near/xyk",
│                                             "message": "AAAAAA==",
│                                             "asset_in": "near",
│                                             "asset_out": "nep141:usdt.tether-token.near",
│                                             "amount": {
│                                               "Amount": {
│                                                 "ExactIn": "1000000000000000000000000"
│                                               }
│                                             },
│                                             "constraint": "2000000"
│                                           }
│                                         },
│                                         {
│                                           "Withdraw": {
│                                             "asset_id": "nep141:usdt.tether-token.near",
│                                             "amount": "PreviousSwapOutput",
│                                             "to": null,
│                                             "rescue_address": null
│                                           }
│                                         }
│                                       ],
│                                       "referrer": null
│                                     }
│                       gas:          100.0 Tgas
│                       deposit:      2 NEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"near","balance":"7000000000000000000000000"}}
│      Fully authorized: true
│      Executing operation 0
│      Executing operation 1
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"near","balance":"6000000000000000000000000"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"bob.near","asset_id":"near","balance":"1000000000000000000000000"}}
│      Executing operation 2
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_event","data":{"dex_id":"slimedragon.near/xyk","event":{"standard":"xyk","version":"1.0.0","event":"pool_updated","data":{"pool_id":0,"pool":{"Private":{"assets":[{"asset_id":"near","balance":"100999499000000000000000000"},{"asset_id":"nep141:usdt.tether-token.near","balance":"297037059"}],"fees":{"receivers":[["Pool",2000],[{"Account":"alice.near"},500],[{"Account":"plach.intear.near"},1]]},"fee_configuration":{"receivers":[["Pool",2000],[{"Account":"alice.near"},500]]},"owner_id":"slimedragon.near","locked":false}}}},"referrer":null,"user":"alice.near"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_event","data":{"dex_id":"slimedragon.near/xyk","event":{"standard":"xyk","version":"1.0.0","event":"swap","data":{"pool_id":0,"request":{"message":"AAAAAA==","asset_in":"near","asset_out":"nep141:usdt.tether-token.near","amount":{"ExactIn":"1000000000000000000000000"},"referrer":null},"amount_in":"1000000000000000000000000","fees_breakdown":[["Pool","near","2000000000000000000000"],[{"Account":"alice.near"},"near","500000000000000000000"],[{"Account":"plach.intear.near"},"near","1000000000000000000"]],"amount_out":"2962941"}},"referrer":null,"user":"alice.near"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"near","balance":"5000000000000000000000000"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"151000000000000000000000000"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"nep141:usdt.tether-token.near","balance":"1297037059"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"nep141:usdt.tether-token.near","balance":"253462941"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"swap","data":{"dex_id":"slimedragon.near/xyk","request":{"message":"AAAAAA==","asset_in":"near","asset_out":"nep141:usdt.tether-token.near","amount":{"ExactIn":"1000000000000000000000000"},"referrer":null},"amount_in":"1000000000000000000000000","amount_out":"2962941","trader":"alice.near","referrer":null}}
│      Executing operation 3
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"alice.near","asset_id":"nep141:usdt.tether-token.near","balance":"250500000"}}
│    Logs [usdt.tether-token.near]:
│      EVENT_JSON:{"standard":"nep141","version":"1.0.0","event":"ft_transfer","data":[{"old_owner_id":"dex.intear.near","new_owner_id":"alice.near","amount":"2962941"}]}
│    Logs [alice.near]:   No logs
│    Logs [dex.intear.near]:
│      After withdraw: Ok(())
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"withdraw","data":{"from":{"Account":"alice.near"},"to":"alice.near","asset_id":"nep141:usdt.tether-token.near","amount":"2962941"}}
│    Logs [alice.near]:   No logs
│    Logs [alice.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│


The "execute_operations" call to <dex.intear.near> on behalf of <alice.near> succeeded.

├  ✓ Ran 4 operations
│  Pool #0 of slimedragon.near/xyk now holds 100.999499 NEAR and 297.037059 USDt
│  Pool #0 of slimedragon.near/xyk swapped 1 NEAR for 2.962941 USDt
│  alice.near now has 5 NEAR on dex.intear.near
│  alice.near now has 250.5 USDt on dex.intear.near
│  bob.near now has 1 NEAR on dex.intear.near


Here is your console command if you need to script it or re-run:
    near intear-dex-management engine operations run alice.near [TEMPORARY DIRECTORY]/batch.json --deposit '2 NEAR' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
